tests/neg/i25260.check
-- [E095] Syntax Error: tests/neg/i25260.scala:3:30 --------------------------------------------------------------------
3 |  expr match { case '{ type t : List; $x: t } => ??? } // error
  |                              ^
  |                              =, >:, or <: expected, but ':' found
  |
  | longer explanation available when compiling with `-explain`
